@@ -19,6 +19,8 @@ master:
  - improve setting amplitude picks when loading existing events (see #102)
  - remove MultiCursor patch that seems to not be needed anymore and breaks in
    matplotlib>=3.6 (see #103)
+ - adjust to an API change in matplotlib 3.6 in removing old/unwanted artists
+   from axes (see #104)
 
 0.8.1
  - fix reading QuakeML after Python3 port (see #98)
